--- a/components/accordeon/Accordion.module.scss
+++ b/components/accordeon/Accordion.module.scss
@@ -1,40 +1,61 @@
-
-
+@keyframes openModal {
+  0% {
+    max-height: 0;
+    opacity:0
+  }
+  100% {
+    max-height: 1000px;
+    opacity: 1;
+  }
+}
 .accordion__container__animation {
-  transition: all .3s ease;
-  max-height: 100vh;
+  .accordion__container {
+    transition: all 0.5s;
+    overflow: hidden;
+    span{
+      padding: 16px 15px;
+    }
+  }
   .accordion__container__item {
-    padding: 0 15px 15px 15px;
+    animation: openModal 0.5s ease-in-out;
+    padding: 15px;
     font-size: 16px;
     line-height: 150%;
     color: #212121;
+    transition: all 0.5s ease;
+    height: auto;
+    background-color: #f9f9f9;
+    margin-top: 10px;
+    border-radius: 10px;
   }
 }
 
 .accordion__container {
-  transition: all .3s;
-  max-height: 60px;
+  transition: all 1s;
   overflow: hidden;
 }
 
 .accordion__container__item {
-  padding: 0 15px 15px 15px;
   font-size: 16px;
   line-height: 150%;
   color: #212121;
+  height: 0;
+  padding:0 15px;
 }
 
 .arrow {
   transform: rotate(-90deg);
-  transition: all 0.3s;
+  transition: all 0.5s;
+
   path {
     fill: #212121;
   }
 }
 
 .arrow__show {
-  transition: all 0.2s;
-   path {
+  transition: all 0.1s;
+
+  path {
     fill: #212121;
   }
 }
@@ -44,19 +65,20 @@
   width: 100%;
   align-items: center;
   justify-content: space-between;
-  padding: 16px 15px;
   background: #E0EFDE;
   border-radius: 6px;
   font-weight: 400;
   font-size: 18px;
   color: #414141;
   cursor: pointer;
-  margin-bottom: 12px;
   box-sizing: border-box;
   -webkit-touch-callout: none; /* iOS Safari */
   -webkit-user-select: none; /* Safari */
   -moz-user-select: none; /* Old versions of Firefox */
   -ms-user-select: none; /* Internet Explorer/Edge */
   user-select: none;
+    span{
+      padding: 16px 15px;
+    }
 }
 
