--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -11,6 +11,7 @@ $colors: (
         error: #ff0000,
         text:#212121,
         text-hover:#60955B,
+        shadow: #a5a5a5,
 );
 
 $screenWidth: (
