--- a/components/slider/Slider.module.scss
+++ b/components/slider/Slider.module.scss
@@ -8,38 +8,38 @@
       margin-bottom: 100px;
       &_slide {
         position: relative;
-        height: 800px;
+        max-height: 800px;
 
         @media (max-width: 1530px) {
-          height: 700px;
+          max-height: 700px;
         }
 
         @media (max-width: 1400px) {
-          height: 650px;
+          max-height: 650px;
         }
 
         @media (max-width: 1240px) {
-          height: 600px;
+          max-height: 600px;
         }
 
         @media (max-width: 830px) {
-          height: 520px;
+          max-height: 520px;
         }
 
         @media (max-width: 610px) {
-          height: 450px;
+          max-height: 450px;
         }
 
         @media (max-width: 500px) {
-          height: 380px;
+          max-height: 380px;
         }
 
         @media (max-width: 450px) {
-          height: 340px;
+          max-height: 340px;
         }
 
         @media (max-width: 400px) {
-          height: 280px;
+          max-height: 280px;
         }
       }
 
@@ -540,7 +540,6 @@
         height: 461px;
         max-width: 950px;
         margin: 0 auto;
-        height: 100%;
         -webkit-touch-callout: none;
         -webkit-user-select: none;
         -khtml-user-select: none;
