--- a/styles/include/_slider.scss
+++ b/styles/include/_slider.scss
@@ -6,7 +6,7 @@
 
   .swiper-pagination {
     margin: 15px auto 0;
-    width: 100px !important;
+    width: fit-content !important;
 
 
     .swiper-pagination-bullet {
