--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -9,7 +9,7 @@
 
 .bim__items {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 300px));
   gap: 20px;
   margin-bottom: 130px;
   @include ipadScreen {
@@ -21,13 +21,14 @@
   }
 
   &__item {
-    padding: 0 0 50px 0;
     border-radius: 10px;
-    overflow: hidden;
     background-color: rgb(245, 245, 245);
-    transition: all 0.3s;
     cursor: pointer;
     position: relative;
+    transition: all .3s;
+    overflow: hidden;
+    padding: 1px;
+    box-shadow: 0 0 4px rgb(33 33 33 / 21%);
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
