--- a/components/modal/Modal.module.scss
+++ b/components/modal/Modal.module.scss
@@ -29,15 +29,28 @@
     display: flex;
     justify-content: space-between;
     padding: 25px 20px 0 20px;
+    &_title{
+      font-size: 26px;
+      color: color(green);
+      text-transform: uppercase;
+      font-weight: 500;
+
+    }
   }
   &_close {
     cursor: pointer;
-    span {
+    &:hover{
+
+        svg {
+          path {
+            fill:color(green);
+          }
+        }
+    }
       svg {
         path {
-          fill:rgb(128, 128, 128);
+         fill: color(gray);
         }
-      }
     }
   }
   .modal_dialog {
