--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -8,6 +8,7 @@ $colors: (
         white: #FFF,
         lightgreen: #2E6143,
         green: #009247,
+        gray: #505050,
         error: #ff0000,
         text:#212121,
         text-hover:#60955B,
