--- a/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
+++ b/features/resources/tab_questionnaires/questionnairesForms/QuestionnariesForms.module.scss
@@ -16,7 +16,8 @@
 .twelfth_form,
 .thirteenth_form,
 .fourteenth_form,
-.fifteenth_form {
+.fifteenth_form,
+.sixteenth_form {
   margin: 100px 0 300px 0;
   border: 1px solid #bebebe;
   .border_top_title {
@@ -1090,6 +1091,9 @@
 
 //Одинацатая форма
 .eleventh_form {
+  h3 {
+    font-size: 18px;
+  }
   &_radios {
     display: flex;
     justify-content: center;
@@ -1106,6 +1110,9 @@
 
 //Двинадцатая форма
 .twelfth_form {
+  h3 {
+    font-size: 18px;
+  }
   &_top_first {
     .middle_block {
       align-items: self-end;
@@ -1122,6 +1129,9 @@
 
 //Тринадцатая форма
 .thirteenth_form {
+  h3 {
+    font-size: 18px;
+  }
   &_top_first {
     .middle_block {
       align-items: self-end;
@@ -1138,6 +1148,9 @@
 
 //Четырнадцатая форма
 .fourteenth_form {
+  h3 {
+    font-size: 18px;
+  }
   .inputs_row {
     display: flex;
     align-items: baseline;
@@ -1157,6 +1170,9 @@
 
 //Пятнадцатая форма
 .fifteenth_form {
+  h3 {
+    font-size: 18px;
+  }
   .inputs_row {
     display: flex;
     align-items: baseline;
@@ -1174,6 +1190,36 @@
   }
   .kanal {
     margin-bottom: 20px;
+  }
+}
+
+//Шестьнадцатая форма
+.sixteenth_form {
+  h3 {
+    font-size: 18px;
+  }
+  .inputs_row {
+    display: flex;
+    align-items: baseline;
+    gap: 20px;
+    margin-bottom: 12px;
+  }
+  .border_title {
+    border-top: 1px solid #bebebe;
+  }
+  .kanal {
+    margin-bottom: 20px;
+  }
+  &_images_container {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 20px 15px;
+  }
+  &_images_block {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
   }
 }
 
