--- a/features/about/tab_job/jobModal/ModalJob.module.scss
+++ b/features/about/tab_job/jobModal/ModalJob.module.scss
@@ -8,6 +8,11 @@
     width: 100%;
     margin: 20px 0 0 0;
   }
+  .modal_job {
+    label {
+      align-items: flex-start;
+    }
+  }
 
   .checkbox__auth {
     display: flex;
