--- a/components/breadcrumbs/BreadCrumbs.module.scss
+++ b/components/breadcrumbs/BreadCrumbs.module.scss
@@ -12,7 +12,7 @@
     @include phoneScreen {
       margin-top: 50px;
       flex-direction: column;
-      gap: 14px;
+      gap: 8px;
     }
     li {
       align-items: center;
@@ -25,6 +25,9 @@
         letter-spacing: 0.025em;
         padding: 6px 0;
         position: relative;
+        @include phoneScreen {
+          font-size: 12px;
+        }
         &:hover {
           color: color(bredcrumbs_hover);
           &::after {
