--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,6 +1,7 @@
 $colors: (
         black: #000,
         border: #e1e1e1,
+        border_category: #f3f3f3,
         bredcrumbs_no_link: #BDBDBD,
         bredcrumbs: #7D7D7D,
         bredcrumbs_hover: #BDBDBD,
