--- a/components/common/header/Header.module.scss
+++ b/components/common/header/Header.module.scss
@@ -9,14 +9,12 @@
   width: 100%;
   z-index: 99;
   transition: all 0.3s;
-
   &__nav {
     display: flex;
     justify-content: space-between;
     align-items: center;
     padding: 40px 0;
     transition: all 0.3s;
-
     &_active {
       display: flex;
       justify-content: space-between;
@@ -24,7 +22,6 @@
       transition: all 0.3s;
       padding: 25px 0 35px 0;
     }
-
     @media (max-width: 1200px) {
       padding: 35px 0;
     }
@@ -41,7 +38,9 @@
 
   &__profile {
     position: relative;
-
+    @media (max-width: 1200px) {
+      position: unset;
+    }
     &_menu {
       background-color: color(white);
       width: 370px;
@@ -63,6 +62,26 @@
         transform: translate(0) scale(1);
         z-index: 2;
         pointer-events: inherit;
+      }
+      &_lists {
+        display: flex;
+        flex-direction: column;
+        li {
+          padding: 18px;
+          border-bottom: 1px solid #bcbdc0;
+          color: color(green);
+          transition: all 0.3s;
+          cursor: pointer;
+          font-size: 16px;
+          &:hover {
+            background-color: color(green);
+            color: color(white);
+            border-color: transparent;
+          }
+          &:last-child {
+            border-bottom: none;
+          }
+        }
       }
     }
     &_over{
