--- a/components/common/header/headerNav/HeaderNav.module.scss
+++ b/components/common/header/headerNav/HeaderNav.module.scss
@@ -8,22 +8,18 @@
   @media (max-width: 1200px) {
     position: absolute;
     right: 0;
-    top: 95px;
+    top: 100%;
     background: rgba(255, 255, 255, 0.99);
-    backdrop-filter: blur(5px);
     flex-direction: column;
     padding: 20px 0 100% 0;
-    align-items: center;
     width: 100%;
     transform: translateX(100%);
     transition: transform 0.2s ease-in;
     z-index: 1;
   }
-
   &.active {
     transform: translateX(0);
   }
-
   &.active_small {
     top: 95px;
     display: flex;
@@ -55,7 +51,6 @@
     }
 
   }
-
   a {
     color: color(green);
     font-size: 16px;
@@ -75,7 +70,6 @@
         display: none;
       }
     }
-
     &.active_menu {
       color: color(lightgreen);
       &::after {
@@ -90,7 +84,6 @@
         transition: width 0.3s;
       }
     }
-
     &:hover {
       color: color(lightgreen);
       &::after {
