--- a/features/home/news/News.module.scss
+++ b/features/home/news/News.module.scss
@@ -160,7 +160,8 @@
         position: relative;
         height: 450px;
         img {
-          object-fit: cover;
+          object-fit: fill;
+          //object-fit: cover;
         }
         @include tabletScreen {
           height: 350px;
@@ -306,7 +307,8 @@
         }
 
         img {
-          object-fit: cover;
+          object-fit: fill;
+          //object-fit: cover;
         }
       }
 
