--- a/features/resources/tab_bim/Bim.module.scss
+++ b/features/resources/tab_bim/Bim.module.scss
@@ -75,8 +75,12 @@
       font-weight: normal;
       line-height: 150%;
       color: #212121;
-      padding: 8px;
-      font-size: 16px;
+      display: -webkit-box;
+      height: 90px;
+      -webkit-line-clamp: 4;
+      -webkit-box-orient: vertical;
+      overflow: hidden;
+      padding: 10px 10px 20px 10px;
     }
   }
 }
