--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -8,7 +8,7 @@
 }
 
 .certificates__items {
-  display: grid;
+  display: flex;
   grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
   gap: 20px;
   margin-bottom: 130px;
