--- a/features/about/tab_who_we/Whowe.module.scss
+++ b/features/about/tab_who_we/Whowe.module.scss
@@ -30,7 +30,6 @@
       }
     }
   }
-
   &_video{
     max-width: 100%;
     margin: 0 auto;
@@ -47,6 +46,23 @@
       margin: 0 auto;
       border-radius: 10px;
     }
+  }
+}
+.loading_container {
+  height: 700px;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  right: 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background: rgb(255 255 255);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+  @include ipadScreen {
+    display: none;
   }
 }
 
