--- a/features/home/about/About.module.scss
+++ b/features/home/about/About.module.scss
@@ -112,6 +112,7 @@
     display: flex;
     justify-content: center;
     flex-wrap: wrap;
+    gap: 1px;
     @media (max-width: 1200px) {
       justify-content: center;
     }
@@ -186,24 +187,19 @@
   }
 
   .tile__item_6 {
-    margin: 28px 0 0 -24px !important;
-
+    margin: -40px 12px 0 -6px !important;
   }
 
   .tile__item_7 {
-    margin: -42px 22px 0 -35px !important;
-  }
-
-  .tile__item_8 {
-    margin: -61px 0 0 -27px !important;
+    margin: -25px 0 0 -12px !important;
   }
 
   .tile__item_9 {
-    margin: -69px -9px 0 -8px !important;
+    margin: -44px -9px 0 -8px !important;
   }
 
   .tile__item_10 {
-    margin: -30px 0 0 -10px !important;
+    margin: -30px 0 0 -5px !important;
   }
 
   .tile__item_11 {
@@ -211,7 +207,7 @@
   }
 
   .tile__item_12 {
-    margin: -16px 20px 0 -45px !important;
+    margin: -16px 20px 0 0 !important;
   }
 
   .tile__item_13 {
@@ -433,6 +429,7 @@
     left: 0;
     z-index: 3;
     text-align: center;
+    padding: 5px;
   }
 
   .tiles .tile .details span {
@@ -447,7 +444,7 @@
 
   .tiles .tile .details .title {
     font-weight: 400;
-    font-size: 15px;
+    font-size: 14px;
     margin: 0 0 3px 0;
     color: color(white);
   }
@@ -455,8 +452,8 @@
   .tiles .tile .details .info {
     margin-top: 2px;
     font-size: 12px;
+    line-height: 115%;
     font-weight: lighter;
-
     span {
       font-size: 10px;
       text-align: center;
