--- a/features/news/News.module.scss
+++ b/features/news/News.module.scss
@@ -507,7 +507,7 @@
     img {
       margin-top: 60px;
       max-height: 610px;
-      object-fit: cover;
+      object-fit: fill;
     }
 
     .view_count {
