--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -8,8 +8,8 @@
 }
 
 .certificates__items {
-  display: flex;
-  grid-template-columns: repeat(auto-fit, minmax(270px, 1fr));
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(440px, 1fr));
   gap: 20px;
   margin-bottom: 130px;
   @include ipadScreen {
