--- a/features/equipment/Equipment.module.scss
+++ b/features/equipment/Equipment.module.scss
@@ -109,13 +109,14 @@
         border-radius: 8px;
         transition: all 0.2s;
         position: relative;
-        display: flex;
         border: 1px solid color(border_category);
         &:hover img {
           object-fit: contain;
           transform: scale(1.1);
         }
-
+        &:last-child{
+          grid-column: span 2;
+        }
         &:hover {
           box-shadow: 0 14px 30px rgba(39, 43, 39, 0.1);
         }
