--- a/features/about/tab_job/Job.module.scss
+++ b/features/about/tab_job/Job.module.scss
@@ -128,12 +128,38 @@
 }
 
 .no_vacancies {
+  width: 100%;
+  height: 8vh;
+  background: #FFFFFF;
+  box-shadow: 0 3px 30px rgba(0, 0, 0, 0.06);
+  border-radius: 10px;
+  padding: 20px ;
+  h2 {
+    font-size: 25px;
+    font-weight: 400;
+    color: color(green);
+    margin-bottom: 10px;
+  }
+  p {
+    font-size: 16px;
+    color: color(green);
+  }
+}
+
+.loading_container {
+  height: 700px;
+  position: absolute;
+  width: 100%;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
-  width: 100%;
-  background-color: color(error);
-  border-radius: 10px;
-  color: color(white);
-  padding: 10px 0 ;
-
+  align-items: center;
+  background: rgb(255 255 255);
+  -webkit-backdrop-filter: blur(3px);
+  backdrop-filter: blur(3px);
+  z-index: 1;
+  @include ipadScreen {
+    display: none;
+  }
 }
