--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -62,8 +62,9 @@
 }
 
 .sertificates__page__items {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
+  display: block;
+  grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
+
   gap: 30px;
   padding: 0 10px;
   margin: 80px 0 130px;
@@ -76,10 +77,16 @@
   }
 
   &__card {
+    display: flex;
+    flex-direction: row;
+    column-gap: 40px;
+    text-align: left;
+    justify-content: flex-start;
     &__img {
       overflow: hidden;
-      border-radius: 10px 10px 0 0;
+      border-radius: 10px;
       margin: 0 0 20px 0;
+      min-width: 200px;
       &:hover {
         img {
           transform: scale(1.1);
@@ -93,20 +100,29 @@
         transition: all .3s;
       }
     }
-
+h2{
+  font-size: 24px;
+  color:color(green);
+  text-transform: uppercase;
+  margin-bottom: 10px;
+}
     h3 {
-      text-align: center;
-      font-size: 22px;
+      text-align: left;
+      font-size: 20px;
+      line-height: 125%;
       font-weight: 400;
       margin-bottom: 8px;
-      color: color(green);
+      color: color(dark);
     }
     
     p {
-      text-align: center;
-      color: color(dark);
-      font-size: 16px;
+      text-align: left;
+      font-size: 18px;
       line-height: 145%;
+      color: color(gray);
+      display: flex;
+      align-items: center;
+      gap: 10px;
     }
   }
 }
