--- a/features/resources/tab_certificates/Certificates.module.scss
+++ b/features/resources/tab_certificates/Certificates.module.scss
@@ -1,7 +1,7 @@
 @import 'styles/mixins.scss';
 @import 'styles/variables.scss';
 
-.certificates_container{
+.certificates_container {
   display: flex;
   justify-content: center;
   margin: 40px auto 0;
@@ -36,6 +36,7 @@
     background-color: rgb(245, 245, 245);
     transition: all 0.3s;
     cursor: pointer;
+
     &:hover {
       box-shadow: 0 0 30px rgba(20, 20, 20, 0.2);
       transform: translateY(-2px);
@@ -46,6 +47,7 @@
   &__item__img {
     overflow: hidden;
     border-radius: 10px 10px 0 0;
+
     &:hover {
       img {
         transform: scale(1.1);
@@ -60,12 +62,14 @@
     }
   }
 }
-
+.sil{
+display: contents;
+}
 .sertificates__page__items {
-  display: block;
+  display: flex;
   grid-template-columns: repeat(auto-fit, minmax(500px, 1fr));
-
-  gap: 30px;
+  flex-direction: column;
+  gap: 60px;
   padding: 0 10px;
   margin: 80px 0 130px;
   @include ipadScreen {
@@ -82,17 +86,25 @@
     column-gap: 40px;
     text-align: left;
     justify-content: flex-start;
+
+    .separ {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
     &__img {
       overflow: hidden;
       border-radius: 10px;
-      margin: 0 0 20px 0;
+      margin: 0;
       min-width: 200px;
+
       &:hover {
         img {
           transform: scale(1.1);
         }
       }
-  
+
       img {
         width: 100%;
         height: 100%;
@@ -100,12 +112,15 @@
         transition: all .3s;
       }
     }
-h2{
-  font-size: 24px;
-  color:color(green);
-  text-transform: uppercase;
-  margin-bottom: 10px;
-}
+
+    h2 {
+      font-size: 24px;
+      color: color(green);
+      text-transform: uppercase;
+      margin-bottom: 10px;
+      display: contents;
+    }
+
     h3 {
       text-align: left;
       font-size: 20px;
@@ -113,8 +128,9 @@ h2{
       font-weight: 400;
       margin-bottom: 8px;
       color: color(dark);
+      margin-top: 10px;
     }
-    
+
     p {
       text-align: left;
       font-size: 18px;
